# ifmo-code

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
app/: build.gradle
cpp/: CMakeLists.txt
cpp/homework/hw-1/: CMakeLists.txt  main.c
cpp/homework/hw-2/: CMakeLists.txt  main.c  testgen.py
cpp/homework/hw-3/: rational.cpp  rational.h
cpp/homework/hw-4/: _format.h  format.h  main.cpp
cpp/homework/hw-5/: CMakeLists.txt  format.h  main.cpp
cpp/homework/hw-6/: lazy_string.h
cpp/homework/hw-7/: CMakeLists.txt
cpp/homework/hw_2/: main.c  testgen.py
cpp/homework/hw_3/: CMakeLists.txt  rational.cpp  rational.h
cpp/homework/hw_4/: CMakeLists.txt  format.h  main.cpp
cpp/homework/hw_5/: format.h
cpp/homework/hw_6/: lazy_string.cpp
cpp/homework/hw_7/: lazy_string.cpp  main.cpp
cpp/src/homework/hw_5/: _format.h  format.cpp  main.cpp
cpp/src/homework/hw_6/: CMakeLists.txt
cpp/src/homework/hw_7/: CMakeLists.txt
discrete-math/labs/: helper.py
homework/hw_1/: CalcMD5.java  CalcSHA256.java  main.c
homework/hw_2/: BinarySearch.java  BinarySearchMissing.java  main.c
homework/hw_3/: ArrayQueue.java  ArrayQueueADT.java  ArrayQueueModule.java  rational.cpp  rational.h
homework/hw_4/: AbstractQueue.java  ArrayQueue.java  LinkedQueue.java  Queue.java
homework/hw_5/: Add.java  Const.java  Divide.java  Expression.java  ExpressionObject.java  ExpressionTest.java  Main.java  Multiply.java  Operation.java  Subtract.java  Util.java  Variable.java
homework/hw_6/: Main.java
intro/: Main.java
intro/homework/: B.java  (+1 more)
(+802 files in other folders)
